--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
     <title>Kofie - Clever solutions.</title> 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    <link rel="shortcut icon" type="image/png" href="kofie.github.io/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="http://kofie.github.io/favicon.png"/>
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
     <!--[if lte IE 8]>
