--- a/index.html
+++ b/index.html
@@ -34,56 +34,56 @@
     <div class="splash">
         <img class="pure-img-responsive" alt="File Icons" width="300" src="img/common/logo-trans.png">
         <p class="splash-subhead">
-            Clever solutions.
+            Clever solutions
         </p>
     </div>
 </div>
-<!--
+
 <div class="content-wrapper">
     <div class="content">
-        <h2 class="content-head is-center">Excepteur sint occaecat cupidatat.</h2>
+        <h2 class="content-head is-center">Sobre a empresa</h2>
 
         <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 
                 <h3 class="content-subhead">
                     <i class="fa fa-rocket"></i>
-                    Get Started Quickly
+                    Soluções Inventivas
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Nós criamos soluções digitais que não somente mostram seu negócio, mas renovam sua marca. Se você procura por mais que apenas uma solução, fale conosco.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                 <h3 class="content-subhead">
                     <i class="fa fa-mobile"></i>
-                    Responsive Layouts
+                    Produtividade
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Nem tudo se resume apenas à sites bonitos. Nossas soluções providenciam uma experiência singular, que lhe ajuda a prodozir resultados outrora inseperados. 
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                 <h3 class="content-subhead">
                     <i class="fa fa-th-large"></i>
-                    Modular
+                    Organização
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                   É importante para nós saber seus objetivos e expectativas. Nós trabalhamos de perto com cada cliente, estabelecendo o que os caracterizam como uma marca, o que querem atingir com seus negócios e onde se encaixam na indústria.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                 <h3 class="content-subhead">
                     <i class="fa fa-check-square-o"></i>
-                    Plays Nice
+                    Foco
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Nós queremos lhe ajudar a ser sucedido em seu negócio. Todas as decisões são tomadas com seu objetivo principal em mente.
                 </p>
             </div>
         </div>
     </div>
-
+<!--
     <div class="ribbon l-box-lrg pure-g">
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
             <img class="pure-img-responsive" alt="File Icons" width="300" src="img/common/file-icons.png">
