--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                   <label for="name">Email</label>
                   <input type="email" name="_replyto" placeholder="email@exemplo.com">
 
+                  <label for="name">Assunto</label>
+                  <input type="text" name="_subject" placeholder="Sobre o que quer falar?"/>
+
                   <label for="body">Mensagem</label>
                   <textarea name="body" style="width: 100%; height: 150px;"></textarea>
                   <br>
