--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     Produtividade
                 </h3>
                 <p>
-                    Nem tudo se resume apenas à sites bonitos. Nossas soluções providenciam uma experiência singular, que lhe ajuda a prodozir resultados outrora inseperados. 
+                    Nem tudo se resume apenas a sites bonitos. Nossas soluções providenciam uma experiência singular, que lhe ajuda a produzir resultados outrora inseperados. 
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -78,7 +78,7 @@
                     Foco
                 </h3>
                 <p>
-                    Nós queremos lhe ajudar a ser sucedido em seu negócio. Todas as decisões são tomadas com seu objetivo principal em mente.
+                    Nós queremos lhe ajudar a ser bem sucedido em seu negócio. Todas as decisões são tomadas com seu objetivo principal em mente.
                 </p>
             </div>
         </div>
