--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 !-->
     <div class="content">
-        <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
+        <h2 class="content-head is-center">Vamos trocar ideias</h2>
 
         <div class="pure-g">
             <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
@@ -116,25 +116,16 @@
                   <input type="text" name="_subject" placeholder="Sobre o que quer falar?"/>
 
                   <label for="body">Mensagem</label>
-                  <textarea name="body" style="width: 100%; height: 150px;"></textarea>
+                  <textarea name="body" style="width: 100%; height: 150px;" placeholder="Sua mensagem vai aqui."></textarea>
                   <br>
                   <button type="submit" class="pure-button">Enviar</button>
                 </fieldset>
             </div>
-<!--
-            <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
-                <h4>Contact Us</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                </p>
 
-                <h4>More Information</h4>
+            <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
+                <h4>Contate-nos</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.
+                   Esse é o lugar para falar conosco. Conte-nos um pouco sobre seus projetos, ideias, nos peça um orçamento ou até mesmo nos chame para tomar um café. Na dúvida, Kofie.  
                 </p>
             </div>
         </div>
@@ -142,15 +133,10 @@
     </div>
 
     <div class="footer l-box is-center">
-        View the source of this layout to learn more. Made with love by the YUI Team.
+        Feito em Parnaíba, Brasil.
     </div>
 
 </div>
-!-->
-
-
-
-
 
 </body>
 </html>
