--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="computer, intelligence, algorhitm, artificial, AI, responsive, web design, git, design, business, kofie, co, com, br, parnaíba, brasil, coffee, piauí"/>
-    <meta name="description" content="Kofie é uma empresa que tem como ferramenta métods de inteligência computacional como redes neurais, algoritmos genéticos, aprendizado de máquina, computação evolutiva e outras para resolver problemas.">
+    <meta name="description" content="Kofie é uma empresa que tem como ferramenta métodos de inteligência computacional como redes neurais, algoritmos genéticos, aprendizado de máquina, computação evolutiva e outras para resolver problemas.">
     <title>Kofie - Clever solutions.</title> 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="shortcut icon" type="image/png" href="http://kofie.github.io/favicon.png"/>
