Add calendly service.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
                 <p>
                    Esse é o lugar para falar conosco. Conte-nos um pouco sobre seus projetos, ideias, nos peça um orçamento ou até mesmo nos chame para tomar um café. Na dúvida, Kofie.  
                 </p>
+
+                <h4>Já sabe o que quer?</h4>
+                <p>
+                    Marque uma reunião rápida no horário que você achar mais conveniente.
+                </p>
+                <a class="pure-button" href="https://calendly.com/kofie/">Clique aqui</a>
             </div>
         </div>
 
