--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
             <form method="POST" class="pure-form pure-form-stacked" action="http://formspree.io/kofieco@gmail.com">
                 <fieldset>
                   <label for="name">Email</label>
-                  <input type="email" name="_replyto" placeholder="email@exemplo.com">
+                  <input type="email" name="_replyto" placeholder="email@exemplo.com" required>
 
                   <label for="name">Assunto</label>
-                  <input type="text" name="_subject" placeholder="Sobre o que quer falar?"/>
+                  <input type="text" name="_subject" placeholder="Sobre o que quer falar?" required/>
 
                   <label for="body">Mensagem</label>
-                  <textarea name="body" style="width: 100%; height: 150px;" placeholder="Sua mensagem vai aqui."></textarea>
+                  <textarea name="body" style="width: 100%; height: 150px;" placeholder="Sua mensagem vai aqui." required></textarea>
                   <br>
                   <button type="submit" class="pure-button">Enviar</button>
                 </fieldset>
