Set target _blank.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <p>
                     Marque uma reunião rápida no horário que você achar mais conveniente.
                 </p>
-                <a class="pure-button" href="https://calendly.com/kofie/">Clique aqui</a>
+                <a class="pure-button" href="https://calendly.com/kofie/" target="_blank">Clique aqui</a>
             </div>
         </div>
 
