--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                   <label for="body">Mensagem</label>
                   <textarea name="body" style="width: 100%; height: 150px;" placeholder="Sua mensagem vai aqui." required></textarea>
                   <br>
+                  <input type="text" name="_gotcha" style="display:none" />
                   <button type="submit" class="pure-button">Enviar</button>
                 </fieldset>
             </div>
