--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                   <textarea name="body" style="width: 100%; height: 150px;" placeholder="Sua mensagem vai aqui." required></textarea>
                   <br>
                   <input type="text" name="_gotcha" style="display:none" />
-                  <button type="submit" class="pure-button">Enviar</button>
+                  <input type="hidden" name="_next" value="http://www.kofie.com.br" />
+                  <button type="submit" onclick="alert("Entraremos em contato o mais breve!")" class="pure-button">Enviar</button>
                 </fieldset>
             </div>
 
@@ -146,7 +147,6 @@
     </div>
 
 </div>
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -155,8 +155,6 @@
 
   ga('create', 'UA-70092195-1', 'auto');
   ga('send', 'pageview');
-
 </script>
-
 </body>
 </html>
