--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="computer, intelligence, algorhitm, artificial, AI, responsive, web design, git, design, business, kofie, co, com, br, parnaíba, brasil, coffee, piauí"/>
     <meta name="description" content="Kofie é uma empresa que tem como ferramenta métodos de inteligência computacional como redes neurais, algoritmos genéticos, aprendizado de máquina, computação evolutiva e outras para resolver problemas.">
     <title>Kofie - Clever solutions.</title> 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <link rel="stylesheet" href="css/framework/pure-min.css">
     <link rel="shortcut icon" type="image/png" href="http://kofie.github.io/favicon.png"/>
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <link rel="stylesheet" href="css/framework/grids-responsive-min.css">
     <!--<![endif]-->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <!--[if lte IE 8]>
