--- a/index.html
+++ b/index.html
@@ -85,24 +85,34 @@
             </div>
         </div>
     </div>
-<!--
-    <div class="ribbon l-box-lrg pure-g">
-        <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-            <img class="pure-img-responsive" alt="File Icons" width="300" src="img/common/file-icons.png">
+<h2 class="content-head is-center">QUEM SOMOS NÓS</h2>
+    <div class="ribbon l-box-lrg pure-g is-center">
+
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+            <img class="pure-img-responsive" alt="Full Stack Developer" width="300" src="img/team/01.png">
+            <h3 class="content-subhead">
+                Aleph Melo
+            </h3>
+
         </div>
-        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
-            <h2 class="content-head content-head-ribbon">Laboris nisi ut aliquip.</h2>
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+            <img class="pure-img-responsive" alt="Full Stack Developer" width="300" src="img/team/02.png">
+            <h3 class="content-subhead">
+                Naerthon Guedelho
+            </h3>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor.
-            </p>
+        </div>
+
+        <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+            <img class="pure-img-responsive" alt="Consultor Master" width="300" src="img/team/03.png">
+            <h3 class="content-subhead">
+                Dario Calçada
+            </h3>
+
         </div>
     </div>
-!-->
+
     <div class="content">
         <h2 class="content-head is-center">Vamos trocar ideias</h2>
 
