--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="software, development, computer, intelligence, algorhitm, artificial, AI, responsive, web design, git, design, business, kofie, co, com, br, parnaíba, brasil, coffee, piauí"/>
+    <meta name="keywords" content="software, café, development, computer, intelligence, algorhitm, artificial, AI, responsive, web design, git, design, business, kofie, co, com, br, parnaíba, brasil, coffee, piauí"/>
     <meta name="description" content="Kofie é uma empresa que tem como ferramenta métodos de inteligência computacional como redes neurais, algoritmos genéticos, aprendizado de máquina, computação evolutiva e outras para resolver problemas.">
     <title>Kofie - Clever solutions.</title> 
     <link rel="stylesheet" href="css/framework/pure-min.css">
