--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
                 <h4>Contate-nos</h4>
                 <p>
-                   Esse é o lugar para falar conosco. Conte-nos um pouco sobre seus projetos, ideias, nos peça um orçamento ou até mesmo nos chame para tomar um café. Na dúvida, Kofie.  
+                   Aqui é o lugar para falar conosco. Conte-nos um pouco sobre seus projetos, ideias, nos peça um orçamento ou até mesmo nos chame para tomar um café. Na dúvida, Kofie.  
                 </p>
 
                 <h4>Já sabe o que quer?</h4>
