--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     Produtividade
                 </h3>
                 <p>
-                    Nem tudo se resume apenas a sites bonitos. Nossas soluções providenciam uma experiência singular, que lhe ajuda a produzir resultados outrora inseperados. 
+                    Nem tudo se resume apenas a sites bonitos. Nossas soluções providenciam uma experiência singular, que lhe ajuda a produzir resultados outrora inesperados. 
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
